# Serving

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BCLOUD  BCLOUD.client  BCLOUD.gpu  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  README_CN.md  README_EN.md  compile_and_upload.sh  readme.md  release.bcloud  requirements.txt  requirements_win.txt
bsl/: CMakeLists.txt  README  deque.h  list.h  map.h  pool.h  set.h
bsl/.svn/: all-wcprops  dir-prop-base  entries
bsl/ResourcePool/: BCLOUD  CMakeLists.txt  Makefile  ResourcePool.cpp  ShallowCopyString.h  bsl_wrappers.h  bsl_wrappers_config.h
bsl/alloc/: BCLOUD  CMakeLists.txt  Makefile  bsl_sample_alloc.h
bsl/archive/: CMakeLists.txt  Makefile  bsl_filestream.h
bsl/buffer/: AutoBuffer.h  BCLOUD  BinBuffer.h  CMakeLists.txt  Makefile.env  bsl_shared_buffer.cpp  bsl_shared_buffer.h_
bsl/check_cast/: BCLOUD  CMakeLists.txt  Makefile  check_cast.py  check_cast_cstring.cpp  check_cast_cstring.h  check_cast_generated.h
bsl/containers/: BCLOUD  CMakeLists.txt  Makefile
bsl/exception/: BCLOUD  CMakeLists.txt  bsl_auto_buffer.h  stack.py  stack_trace.h  test_bsl_exception.cpp
bsl/pool/: CMakeLists.txt  bsl_cachedpoolappend.cpp  bsl_debugpool.h  bsl_pool.h  bsl_poolalloc.h  bsl_xcompool.cpp  bsl_xcompool.h  bsl_xmempool.h
bsl/proctest/: Makefile  bsl_thread_hash.cpp  bslsort.cpp  bsltest.cpp  stl_hashmap.h  stllist.cpp  stlsort.cpp
bsl/test/: test_bsl_hash_multimap.cpp  test_bsl_hashtable.cpp
bsl/unittest/: bsl_test_auto_buffer.h  bsl_test_cpalloc_address.h  bsl_test_exception_prepare.h_  bsl_test_hash_qa.h  bsl_test_hashmap.h  bsl_test_hashmap_string.h  bsl_test_hashtable.h  bsl_test_header.h  bsl_test_memcpy.h  bsl_test_phashmap.h  bsl_test_phashmap_dump.h  bsl_test_phashmap_str_dump.h  bsl_test_phashtable.h  bsl_test_queue.h  bsl_test_readmap.h  bsl_test_readset.h  bsl_test_rwhashset.h  bsl_test_rwseque_pthread_string.h  bsl_test_sample_alloc_allocate_deallocate.h  bsl_test_slist.h  bsl_test_stack.h  bsl_test_string.h  header.hpp  header_string.hpp
bsl/utils/: CMakeLists.txt  Makefile
bsl/var/: Makefile.env  Makefile.rules
bsl/yperfbench/: README
configure/: BCLOUD  CMakeLists.txt  ChangeLog  CmdOption.cpp  CmdOption.h  ConfigArray.h  ConfigError.cpp  ConfigError.h  ConfigGroup.cpp  ConfigGroup.h  ConfigReloader.cpp  ConfigReloader.h  ConfigUnit.cpp  ConfigUnit.h  Configure.cpp  Configure.h  EnvGet.h  FileReloader.cpp  FileReloader.h  Makefile  README  build.sh  build_force.sh  cfgext.cpp  cfgext.h  cfgflag.cpp  cfgflag.h  configure.prj  run.sh
configure/compiler/: Makefile
configure/constraint/: Constraint.cpp  Constraint.h  ConstraintFunction.cpp  ConstraintFunction.h  GlobalConsFun.h  cc_default.cpp  cc_default.h
configure/include/: configure_parser.h
configure/proto/: inferencer_configure.proto  sdk_configure.proto  server_configure.proto
configure/reader/: RawData.cpp  RawData.h  Reader.cpp  Reader.h
configure/src/: configure_parser.cpp
configure/test/: Makefile  checkone.conf  checkone.range  clt.des  comlog.range  gentest.sh  inc.conf  log.des  makefile.ini  new.conf  raw.conf  rebuild.conf  reload.conf  reload.range  run.out  run.sh  str.conf  str2str  svr.des  t1.conf  t1.cons  test.conf  test.deps  test.prj  test_1010new.cpp  test_auto.cpp  test_cfg.cpp  test_cfg.des  test_cfg2.cpp  test_cfg3.cpp  test_checkone.cpp  test_conf.cpp  test_conf.res  test_demo.cpp  test_demo.res  test_err.cpp  test_err.res  test_filereload.cpp  test_get_default.cpp  test_get_value.cpp  (+24 more)
configure/tests/: test_configure.cpp
configure/utils/: cc_exception.h  cc_log.h  cc_struct.h  cc_trans.h  cc_utils.h  init.cpp  trans.cpp
core/: CMakeLists.txt
core/configure/: CMakeLists.txt
core/cube/: CMakeLists.txt
core/general-client/: CMakeLists.txt  README.md  README_CN.md  inference.conf
core/general-server/: CMakeLists.txt
core/kvdb/: CMakeLists.txt
core/pdcodegen/: CMakeLists.txt
core/predictor/: CMakeLists.txt  Dockerfile  build.sh
core/preprocess/: CMakeLists.txt
core/sdk-cpp/: CMakeLists.txt
core/tests/: gtest_db_func.cpp  gtest_kvdb.cpp  test_rocksdb.cpp
core/util/: CMakeLists.txt
cube/cube-api/: CMakeLists.txt
cube/cube-server/: CMakeLists.txt
cube/cube-transfer/: CMakeLists.txt
demo-client/: BCLOUD  CMakeLists.txt  setup.py
demo-client/conf/: predictors.prototxt
demo-client/php/: echo.php  text_classification.php
demo-client/python/: echo.py  text_classification.py
demo-client/src/: bert_service.cpp  ctr_prediction.cpp  data_pre.h  dense_format.cpp  echo.cpp  echo_kvdb.cpp  general_model.cpp  general_model.h  int64tensor_format.cpp  load_general_model.cpp  pybind_general_model.cpp  sparse_format.cpp  text_classification.cpp  ximage.cpp  ximage_press.cpp
elastic-ctr/client/: CMakeLists.txt
examples/demo-client/: CMakeLists.txt  predictor.conf
inferencer-fluid-cpu/: BCLOUD  CMakeLists.txt
inferencer-fluid-cpu/include/: fluid_cpu_engine.h
inferencer-fluid-cpu/src/: fluid_cpu_engine.cpp
kvdb/: BCLOUD  CMakeLists.txt
kvdb/src/: .gtest_kvdb.cpp.swp  gtest_db_func.cpp  gtest_db_thread.cpp  gtest_kvdb.cpp  mock_param_dict_impl.cpp  paddle_rocksdb.cpp  param_dict_mgr_impl.cpp  rockskvdb_impl.cpp  test_rocksdb.cpp
paddle_inference/inferencer-fluid-arm/: CMakeLists.txt
paddle_inference/inferencer-fluid-cpu/: CMakeLists.txt
paddle_inference/inferencer-fluid-gpu/: CMakeLists.txt
paddle_inference/paddle/: CMakeLists.txt
predictor/: BCLOUD  CMakeLists.txt  Dockerfile.gpu  Makefile  bcloud.out  ci.yml
predictor/common/: CMakeLists.txt  constant.cpp  constant.h  inner_common.h  macros.h  types.h  utils.h
predictor/conf/: echo_kvdb_dag.conf  gflags.conf  imagec_dag.conf  log.conf  rd_dict.conf  resource.conf  service.conf  workflow.conf
proto_configure/: CMakeLists.txt
python/: CMakeLists.txt  gen_version.py  requirements.txt  requirements_mac.txt  setup.py.app.in  setup.py.client.in  setup.py.in  setup.py.server.in  setup.py.server_gpu.in  util.py
sdk-cpp/: BCLOUD  CMakeLists.txt
serving/: BCLOUD  CMakeLists.txt
(+3314 files in other folders)
